tests/expectations/parser/statement/let_mut_recover.out
Error [EPAR0370005]: expected '=', ':' -- found 'x'
    --> test:4:13
     |
   4 |     let mut x = 0;
     |             ^
